--- a/css/index.css
+++ b/css/index.css
@@ -23,14 +23,47 @@ canvas {
   background-size: cover;
   background-repeat: no-repeat;
 }
-
+.lines-control {
+  position: fixed;
+  top: 25px;
+  width: 15%;
+  left: 2%;
+  justify-content: space-between;
+  display: flex;
+  border: 1px dotted black;
+  border-radius: 100px;
+  padding: 0.8em 2em;
+  background: transparent;
+}
+#undo {
+  background: rgb(105, 38, 167);
+  color: whitesmoke;
+  cursor: pointer;
+  touch-action: none;
+  border-radius: 5px;
+  font-size: 0.9em;
+  padding: 0.2em 0.8em;
+  line-height: 20px;
+  outline: none;
+}
+#redo {
+  outline: none;
+  touch-action: none;
+  background: rgb(43, 226, 156);
+  color: whitesmoke;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 0.9em;
+  padding: 0.2em 0.8em;
+  line-height: 20px;
+}
 #controls {
   position: fixed;
   top: 0;
   right: 0;
   padding: 0.5em 2em;
   border: 1px solid gray;
-  background-color: white;
+  background: white;
 }
 
 .lightBorder {
