--- a/css/index.css
+++ b/css/index.css
@@ -27,7 +27,10 @@ canvas {
   position: fixed;
   top: 2%;
   margin-left: 7em;
-  padding: 1em
+  padding: 1em;
+  background: rgb(183, 183, 183);
+  border: 1px solid;
+  border-radius: 5px;
 }
 #dtool{
   background: white;
