--- a/css/index.css
+++ b/css/index.css
@@ -1,128 +1,196 @@
 * {
-  border: 0;
-  padding: 0;
-  margin: 0;
+    border: 0;
+    padding: 0;
+    margin: 0;
 }
 
 body {
-  margin: 0;
-  justify-content: center;
-  align-items: center;
-  display: flex;
+    margin: 0;
+    justify-content: center;
+    align-items: center;
+    display: flex;
 }
 
-.hidden {
-  display: none;
+#imageLoader {
+    color: transparent;
+    position: fixed;
+    opacity: 0;
 }
+
+#imageLoader::-webkit-file-upload-button {
+    opacity: 0;
+    display: none;
+    outline: none;
+    pointer-events: none
+}
+
+#imageLoader::before {
+    content: 'Please select Image to be measured';
+    color: black;
+    display: inline-block;
+    background: -webkit-linear-gradient(top, #f9f9f9, #e3e3e3);
+    border: 1px solid #999;
+    border-radius: 3px;
+    padding: .8em .8em;
+    outline: none;
+    white-space: nowrap;
+    -webkit-user-select: none;
+    cursor: pointer;
+    text-shadow: 1px 1px #fff;
+    font-weight: 700;
+    font-size: 10pt;
+}
+
+#imageLoader:hover::before {
+    border-color: black;
+}
+
+#imageLoader:active {
+    outline: 0;
+}
+
+#imageLoader:active::before {
+    background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
+}
+
 canvas {
-  position: relative;
-  top: 100px;
-  margin-top: auto;
-  border: 1px solid gray;
-  background: url("../images/image_sal4vg.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
+    position: relative;
+    top: 100px;
+    margin-top: auto;
+    border: 1px solid gray;
+    /*background: url("../images/boundary-dimensions.png");*/
+    -webkit-background-size: cover;
+    /* background: url("../images/image_sal4vg.jpg");
+    background-size: cover;
+    background-repeat: no-repeat; */
 }
-.drawing-tool{
-  position: fixed;
-  top: 2%;
-  margin-left: 7em;
-  padding: 1em;
-  background: rgb(183, 183, 183);
-  border: 1px solid;
-  border-radius: 5px;
+
+.drawing-tool {
+    position: fixed;
+    top: 2%;
+    z-index: 100;
+    margin-left: 7em;
+    padding: 1em;
+    background: rgb(183, 183, 183);
+    border: 1px solid;
+    border-radius: 5px;
 }
-#dtool{
-  background: white;
-  border: 1px solid;
-  border-radius: 5px;
-  font-size: 10px;
-  padding: 1px;
-  outline:none;
+
+#dtool {
+    background: white;
+    border: 1px solid;
+    border-radius: 5px;
+    font-size: 10px;
+    padding: 1px;
+    outline: none;
 }
-#dtool:hover{
-  cursor: pointer
+
+#dtool:hover {
+    cursor: pointer
 }
+
 .lines-control {
-  position: fixed;
-  top: 25px;
-  width: 15%;
-  left: 5%;
-  justify-content: space-between;
-  display: flex;
-  border: 1px dotted black;
-  border-radius: 100px;
-  padding: 0.8em 2em;
-  background: transparent;
+    position: fixed;
+    z-index: 100;
+    top: 25px;
+    width: 15%;
+    left: 5%;
+    justify-content: space-between;
+    display: flex;
+    border: 1px dotted black;
+    border-radius: 100px;
+    padding: 0.8em 2em;
+    background: transparent;
 }
+
 #undo {
-  background: rgb(105, 38, 167);
-  color: white;
-  cursor: pointer;
-  touch-action: none;
-  border-radius: 5px;
-  font-size: 0.9em;
-  padding: 0.2em 0.8em;
-  line-height: 20px;
-  outline: none;
+    background: rgb(105, 38, 167);
+    color: white;
+    cursor: pointer;
+    touch-action: none;
+    border-radius: 5px;
+    font-size: 0.9em;
+    padding: 0.2em 0.8em;
+    line-height: 20px;
+    outline: none;
 }
+
 #redo {
-  outline: none;
-  background: rgb(32, 152, 24);
-  color: white;
-  cursor: pointer;
-  touch-action: none;
-  border-radius: 5px;
-  font-size: 0.9em;
-  padding: 0.2em 0.8em;
-  line-height: 20px;
+    outline: none;
+    background: rgb(32, 152, 24);
+    color: white;
+    cursor: pointer;
+    touch-action: none;
+    border-radius: 5px;
+    font-size: 0.9em;
+    padding: 0.2em 0.8em;
+    line-height: 20px;
 }
+
 #controls {
-  position: fixed;
-  top: 0;
-  right: 0;
-  padding: 0.5em 2em;
-  border: 1px solid gray;
-  background: white;
+    position: fixed;
+    z-index: 100;
+    top: 0;
+    right: 1.9em;
+    padding: .2em 2em;
+    border: 1px solid gray;
+    background: white;
 }
 
 .lightBorder {
-  border: 2px solid white;
+    border: 2px solid white;
 }
+
 label {
-  font-size: 0.6em;
+    font-size: 0.6em;
 }
+
 p {
-  margin: 1.3px 10px;
-  display: flex;
+    margin: 1.3px 10px;
+    display: flex;
 }
+
 #defaultScale {
-  font-size: 1em;
-  line-height: 1px;
-  outline: none;
+    font-size: 1em;
+    line-height: 1px;
+    outline: none;
 }
+
 #centimeters {
-  font-size: 1.5em;
-  line-height: 1px;
+    font-size: 1.5em;
+    line-height: 1px;
 }
+
 #meters {
-  font-size: 1.5em;
-  line-height: 1px;
+    font-size: 1.5em;
+    line-height: 1px;
 }
+
+#totalArea {
+    font-size: 1.5em;
+    line-height: 1px;
+}
+
 #clearCanvas {
-  cursor: pointer;
-  padding: 0.4em 0.5em;
-  font-size: 0.6em;
-  color: white;
-  background: red;
-  outline: none;
-  margin-left: auto;
+    position: fixed;
+    z-index: 100;
+    top: 45px;
+    left: 30%;
+    cursor: pointer;
+    padding: 0.4em 0.5em;
+    font-size: 0.6em;
+    color: #0d0d0d;
+    background: red;
+    outline: none;
+    margin-left: auto;
 }
+
 #calcBtn {
-  padding: 0.4em 0.5em;
-  font-size: 0.6em;
-  background: blue;
-  color: white;
-  outline: none;
-  cursor: pointer;
+    padding: 0.4em 0.5em;
+    font-size: 0.6em;
+    background: blue;
+    color: white;
+    outline: none;
+    cursor: pointer;
+    margin-left: 18em;
 }
